# Fencing_Game

./: .gitignore  README.md  game.db  pyproject.toml  《剑之初程：淬炼之路》v3.3 0210【完整版】.docx  《剑之初程：淬炼之路》v3.3 0210【核心数据系统文档-后端】.docx  《剑之初程：淬炼之路》v3.5 0316【改选项表达】.docx  《剑之初程：淬炼之路》需求更新至0320.docx  《剑之初程：淬炼之路》需求更新至0324.docx
content/v3.3.0/: README.md  achievements.json  changelog.json  endings.json  experience.json  finals.json  intro.json  personality.json  report_reference.json  report_templates.json  rules.json  ui.json  weeks.json
docs/: AUDIT_FEEDBACK_STAGE1.md  IMPLEMENTATION_HANDOFF.md  IMPLEMENTATION_LOG_0320.md  architecture.md  content-ids.md  content-validation.md  engine-contract.md  report-mapping.md
docs/ruleset/: v3.3.0.md
engine/: __init__.py  achievements.py  constants.py  content.py  core.py  models.py  personality.py  report.py  rng.py  scoring.py
game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: dev_up.sh  seed_leaderboard_demo.py
server/: alembic.ini
server/alembic/: env.py
server/alembic/versions/: 20260213_0001_init.py  20260213_0002_seed_bigint.py  20260215_0001_personality_reveal_ack.py  20260322_0001_share_limits_leaderboard.py  (+1 more)
server/app/: config.py  db.py  main.py  models.py  presentation.py  schemas.py  security.py  service.py  state_codec.py
tests/engine/: test_engine.py
tests/server/: test_api.py
tools/: validate_content.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/src/: App.tsx  api.ts  copy.ts  styles.css  types.ts
(+3 files in other folders)
